Adjust background color

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
     color: white;
-    background-color: black;
+    background-color: #0b0b0b;
     font-family: 'Helvetica', sans-serif;
 }
 
